--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-mdl": "^1.11.0",
-    "react-scripts": "^3.3.0"
+    "react-scripts": "^3.3.0",
+    "styled-components": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,4 +47,3 @@
   },
   "homepage": "https://github.com/kimtimmy93/my-portfolio#readme"
 }
-
