--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "node-sass": "^4.13.1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kimtimmy93/my-portfolio.git"
