--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-mdl": "^1.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
+    "react-scroll": "^1.7.16",
     "styled-components": "^5.0.0"
   },
   "scripts": {
