--- a/package.json
+++ b/package.json
@@ -50,5 +50,5 @@
   "bugs": {
     "url": "https://github.com/kimtimmy93/my-portfolio/issues"
   },
-  "homepage": "https://github.com/kimtimmy93/my-portfolio#readme"
+  "homepage": "https://timkcode.com"
 }
